--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,7 @@ platform :ios, '11.0'
 target 'FireAuthBoilerPlate' do
   config = use_native_modules!
 
+
   use_react_native!(
     :path => config[:reactNativePath],
     # to enable hermes on iOS, change `false` to `true` and then install pods
@@ -14,10 +15,13 @@ target 'FireAuthBoilerPlate' do
 
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  pod 'RNFBAuth', :path => '../node_modules/@react-native-firebase/auth'
 
+  
   target 'FireAuthBoilerPlateTests' do
     inherit! :complete
     # Pods for testing
+
   end
 
   # Enables Flipper.
